--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "version": 2,
+  "builds": [{
+    "src": "./index.ts",
+    "use": "@vercel/node"
+  }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
